tao form co ban

--- a/Home.html
+++ b/Home.html
@@ -39,14 +39,13 @@ Như sa, như ùa vào buồng lái</pre>
     <li>ghế</li>
     <li>cửa sổ</li>
 </ul>
-<br>
 <p>Tạo danh sách theo thứ tự
 <ol type="1">
     <li>thẻ p </li>
     <li>thẻ img </li>
     <li>thẻ br </li>
-</ol></p>
-<p id="trung"><h3>Chào mừng tới đây</h3></p>
+</ol>
+<p id ="trung"><h3>Chào mừng tới đây</h3>
 <p>Danh sách trong danh sách
 <ol type="1">
     <li>nhóm IA <ul><li>natri</li>
@@ -56,6 +55,6 @@ Như sa, như ùa vào buồng lái</pre>
                     <li>canxi</li>
                     <li>magie</li>
                  </ul>
-    </ol></p>
+    </ol>
    </body>
 </html>
