tao bang nang cao

--- a/tao form tim kiem google.html
+++ b/tao form tim kiem google.html
@@ -5,10 +5,17 @@
     <title>Title</title>
 </head>
 <body>
-<form action="https://www.google.com.vn/search" method="get">
+<form action="https://www.google.com.vn/search" method="post">
     <input type="text" name="q" value="ban muon tim gi">
     <input type="submit" name="submit" value="tìm kiếm trên google">
 </form>
+
+
+
+
+
+
+
 <form action="https://www.bing.com/search" method="post">
     <input type="text" name="q">
     <input type="submit" name="submit" value="tìm kiếm trên bing">
