--- a/taobangnangcao.html
+++ b/taobangnangcao.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+<style>
+    tr:nth-child(1){background-color: red}
+    tr:nth-child(2){background-color: red}
+    table,tr,td{border:1px solid black}
+    table{ border-collapse:collapse; text-align: center}
+
+    tr{height:50px;}
+
+</style>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<table style="width: 100%">
+    <CAPTION><h3>Thời khóa biểu</h3></CAPTION>
+    <tr>
+        <td rowspan="2">Thứ</td>
+        <td colspan="2" >Hoạt động</td>
+    </tr>
+    <tr>
+        <td>Sáng</td>
+        <td>Chiều</td>
+    </tr>
+    <tr>
+        <td>Thứ 2</td>
+        <td>Thể dục</td>
+        <td>HD trò chơi mới</td>
+    </tr>
+    <tr>
+        <td>Thứ 3</td>
+        <td>Nhận biết tập nói</td>
+        <td>Rèn nề nếp, kĩ năng sống</td>
+    </tr>
+    <tr>
+        <td>Thứ 4</td>
+        <td>Âm nhạc</td>
+        <td>Vui chơi</td>
+    </tr>
+    <tr>
+        <td>Thứ 5</td>
+        <td>Văn học</td>
+        <td>Nhận biết các giá trị sống</td>
+    </tr>
+</table>
+
 </body>
 </html>
