--- a/tao form don gian.html
+++ b/tao form don gian.html
@@ -4,39 +4,36 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        table{border:1px solid black;width: 40%; background-color: #454545}
-        th{background-color:darkorange;color:white}
-        tr{height: 30px;}
-        td{color: #00a4ef;}
+        table{border:1px solid black}
     </style>
 </head>
 <body>
 <form>
     <table>
         <tr>
-            <th colspan="4" >Sở thích của bạn</th>
+            <th colspan="4" style="background-color: #bad80a; color: whitesmoke">Sở thích của bạn</th>
         </tr>
         <tr>
-            <td>Họ và tên</td>
+            <td style="color: blue"  >Họ và tên</td>
             <td colspan="3"><input type="text" name="name"></td>
         </tr>
         <tr>
-            <td>Email</td>
+            <td style="color: blue">Email</td>
             <td colspan="3"><input type="text" name="email"></td>
         </tr>
         <tr>
-            <td rowspan="4">Sở thích</td>
-            <td><input type="checkbox" name="hobby" color>Thể thao</td>
-            <td><input type="checkbox" name="hobby">Âm nhạc </td>
-            <td><input type="checkbox" name="hobby">Đọc sách</td>
+            <td rowspan="4" style="color: blue">Sở thích</td>
+            <td style="color: red"><input type="checkbox" name="hobby" color>Thể thao</td>
+            <td style="color: red"><input type="checkbox" name="hobby">Âm nhạc </tdv>
+            <td style="color: red"><input type="checkbox" name="hobby">Đọc sách</td>
         </tr>
         <tr>
-            <td><input type="checkbox" name="hobby">Lướt web</td>
-            <td><input type="checkbox" name="hobby">Chơi game</td>
-            <td><input type="checkbox" name="hobby">Điện ảnh</td>
+            <td style="color: red"><input type="checkbox" name="hobby">Lướt web</td>
+            <td style="color: red"><input type="checkbox" name="hobby">Chơi game</td>
+            <td style="color: red"><input type="checkbox" name="hobby">Điện ảnh</td>
         </tr>
         <tr>
-            <td colspan="3"><input type="checkbox" name="hobby">Du lịch </td>
+            <td colspan="3" style="color: red"><input type="checkbox" name="hobby">Du lịch </td>
         </tr>
         <tr>
             <td colspan="3"><input type="submit" name="Submit Form" value="Gửi thông tin">
@@ -49,28 +46,28 @@
 
 
 <form>
-    <table>
-        <th colspan="2">Đăng kí học viên</th>
+    <table style="background-color: darkorange">
+        <th colspan="2"  ">Đăng kí học viên</th>
         <tr>
-            <td>Họ và tên</td>
+            <td style="color: blue">Họ và tên</td>
             <td><input type="=text" name="name"></td>
         </tr>
         <tr>
-            <td>Ngày sinh</td>
+            <td style="color: blue">Ngày sinh</td>
             <td><input type="text" name="bday"></td>
 
         </tr>
         <tr>
-            <td>Giới tính</td>
+            <td style="color: blue">Giới tính</td>
             <td><input type="radio" name="gender">Nam
             <input type="radio" name="gender">Nữ</td>
         </tr>
         <tr>
-            <td>Địa chỉ</td>
+            <td style="color: blue">Địa chỉ</td>
             <td><textarea rows="1" cols="20" name="address"></textarea></td>
         </tr>
         <tr>
-            <td>Lớp</td>
+            <td style="color: blue">Lớp</td>
             <td>
                 <select type="drop-down">
                     <option>-Chọn lớp-</option>
@@ -81,11 +78,11 @@
 
         </tr>
         <tr>
-            <td>Email</td>
+            <td style="color: blue>Email</td>
             <td><input type="text" name="email"></td>
         </tr>
         <tr>
-            <td>Điên thoại</td>
+            <td style="color: blue>Điên thoại</td>
             <td><input type="text" name="phone">
         </tr>
         <tr>
@@ -95,6 +92,5 @@
         </tr>
     </table>
 </form>
-
 </body>
 </html>
