--- a/tao form don gian.html
+++ b/tao form don gian.html
@@ -47,7 +47,7 @@
 
 <form>
     <table style="background-color: darkorange">
-        <th colspan="2"  ">Đăng kí học viên</th>
+        <th colspan="2">Đăng kí học viên</th>
         <tr>
             <td style="color: blue">Họ và tên</td>
             <td><input type="=text" name="name"></td>
