--- a/tao giao dien form dang ki nguoi dung.html
+++ b/tao giao dien form dang ki nguoi dung.html
@@ -6,13 +6,13 @@
 </head>
 <body type="paragrap">
 <form action="http://demo.codegym.vn/6/registration_form/register.php" method="post">
-    <h4>Họ và tên:</h4>
-    <input type="text" name="name">
-    <h4>Email:</h4>
-    <input type="text" name="email">
-    <h4>Số điện thoại:</h4>
-    <input type="text" name="phone">
-    <h4>Giới tính:</h4>
+    <strong>Họ và tên:</strong> <br>
+    <input type="text" name="name"> <br>
+    <strong>Email:</strong><br>
+    <input type="text" name="email"> <br>
+    <strong>Số điện thoại:</strong><br>
+    <input type="text" name="phone"> <br>
+    <strong>Giới tính:</strong><br>
     <input type="radio" name="gender" value="Nam">Nam
     <input type="radio" name="gender" value="Nữ">Nữ
     <br>
