--- a/tao bang don gian.html
+++ b/tao bang don gian.html
@@ -11,23 +11,23 @@
         <td colspan="3">
             Lớp: T090I<br>Giáo viên: KhoaNV<br>Phòng học: Class3/Lab3
         </td>
-        <td colspan="3" style="text-align: right">
-            Thời gian học: 13h30-17h30<br>Ngày học: Thứ 3,5,7
+        <td colspan="3" style="text-align: right; vertical-align: top">
+            Thời gian học: 13h30-17h30<br>Thứ 3,5,7
         </td>
     </tr>
-    <tr style="text-align: center">
+    <tr style="text-align: center"><br>
         <td colspan="3"></td>
         <td style="background-color: #bad80a"> Thứ 3</td>
         <td style="background-color: #bad80a">Thứ 5</td>
         <td style="background-color: #bad80a">Thứ 7</td>
     </tr>
-    <tr style="background-color: darkorange">
+    <tr style="background-color: darkorange; text-align: center">
         <td>Tuần</td>
         <td>Ngày bắt đầu</td>
         <td>Ngày kết thúc</td>
         <td colspan="3" style="text-align: center">Môn học</td>
     </tr>
-    <tr>
+    <tr style="text-align: center">
         <td>01</td>
         <td>01/09/2009</td>
         <td>05/09/2009</td>
@@ -35,7 +35,7 @@
         <td>CF-T2,L2</td>
         <td>CF-T3,L3</td>
     </tr>
-    <tr>
+    <tr style="text-align: center">
         <td>02</td>
         <td>08/09/2009</td>
         <td>12/09/2009</td>
@@ -43,8 +43,8 @@
         <td>CF-Written Test</td>
         <td>C-T1,L1</td>
     </tr>
-    <tr>
-        <td>01</td>
+    <tr style="text-align: center">
+        <td>03</td>
         <td></td>
         <td></td>
         <td></td>
