--- a/ung-dung-chuyen-doi-tien-te.html
+++ b/ung-dung-chuyen-doi-tien-te.html
@@ -26,8 +26,8 @@
             </select>
         </td>
     </tr>
-</table>
-<p id="xong">Kết quả:</p>
+</table><br>Kết quả:
+<p id="xong"></p>
 <br>
 <button type="button" onclick="doi()">Đổi</button>
 
