--- a/su-kien-ban-phim.html
+++ b/su-kien-ban-phim.html
@@ -5,14 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<img id="anh" src=""
 
-<input type="button" id="trai" value="trái" onclick="trai()">
-<input type="button" id="tren" value="trên" onclick="tren()">
-<input type="button" id="xuong" value="xuống" onclick="xuong()">
-<input type="button" id="phai" value="phải" onclick="phai()">
-<img id="anh" style="position:absolute; top:30px; left:0px"
-     src="https://1.bp.blogspot.com/-I-flF0X3d9E/UMvXpooC4JI/AAAAAAAAbpw/dmVZ-fFw_N8/s1600/hinh-nen-dep.jpg"
-     width="300px" height="300px">
 </body>
 </html>
 <script>
@@ -33,4 +27,5 @@
         let a = document.getElementById("anh");
         a.style.top = parseInt(a.style.top) + 10 + "px"
     }
+
 </script>
