--- a/Bai-tap/mang.html
+++ b/Bai-tap/mang.html
@@ -5,37 +5,84 @@
     <title>Title</title>
 </head>
 <body>
-
+<p>Tìm số lớn thứ n trong mảng</p>
+<input placeholder="Nhập các số để tạo mảng" id="input">
+<input placeholder="Bạn muốn tìm số lớn thứ mấy" id="socantim">
+<button onclick="tim()">Tìm</button>
 </body>
 </html>
 <script>
-    ///Cho một mảng số nguyên cho trước.
-    // Viết chương trình để thêm một số tại vị trí bất kì
-    alert("Bài 1")
-    let a = parseInt(prompt("Nhập số muốn thêm vào"));
-    let b = parseInt(prompt("Nhập vị trí muốn thêm vào"));
-    let arr = [1, 3, 2, 4, 6]
-    let i;
-    for (i = arr.length; i > b - 1; i--) {
-        arr[i] = arr[i - 1];
+    function themsso() {
+        ///Cho một mảng số nguyên cho trước.
+        // Viết chương trình để thêm một số tại vị trí bất kì
+        alert("Bài 1")
+        let a = parseInt(prompt("Nhập số muốn thêm vào"));
+        let b = parseInt(prompt("Nhập vị trí muốn thêm vào"));
+        let arr = [1, 3, 2, 4, 6]
+        let i;
+        for (i = arr.length; i > b - 1; i--) {
+            arr[i] = arr[i - 1];
+        }
+        arr[b - 1] = a
+        document.write(arr)
     }
-    arr[b - 1] = a
-    document.write(arr)
 
 </script>
 
 <script>
     //Tìm số nhỏ nhất trong mảng và hiển thị ra số đó và vị trí
-    let arr = [10, -40, -95, 63, -4, 4, 67, 43];
-    let i;
-    let vitri;
-    let min = arr[0]
-    for (i = 0; i < arr.length; i++) {
-        if (min > arr[i]) {
-            min = arr[i]
-            vitri=i+1;
+    function timmin() {
+        let arr = [10, -40, -95, 63, -4, 4, 67, 43];
+        let i;
+        let vitri;
+        let min = arr[0]
+        for (i = 0; i < arr.length; i++) {
+            if (min > arr[i]) {
+                min = arr[i]
+                vitri = i + 1;
+            }
         }
-    } document.write("Số nhỏ nhất là "+min+"<br>");
-    document.write("Nằm tại vị trí thứ "+vitri)
+        document.write("Số nhỏ nhất là " + min + "<br>");
+        document.write("Nằm tại vị trí thứ " + vitri)
+    }
 
+</script>
+<script>
+    //Tìm số lớn thứ n trong mảng
+    function tim() {
+        let count=0
+        let temp;
+        let arr = [];
+        let input = document.getElementById("input").value;
+        let socantim=document.getElementById("socantim").value;
+        arr = input.split(",");
+        for (let i = 1; i<= arr.length - 1; i++) {    //sắp sếp giảm dần
+            for (let j = 0; j < arr.length-i; j++) {
+                if (arr[j] < arr[j + 1]) {
+                    temp = arr[j];
+                    arr[j] = arr[j + 1];
+                    arr[j + 1] = temp;
+                    count+=1
+                }
+
+            }
+        }
+        let arr2=[];          //kiểm tra khác nhau thì cho vào mảng mới
+        let a=0;
+        let check;
+        for (let i=0;i<arr.length-1;i++) {
+            for (let j=i+1;j<arr.length;j++) {
+                if (arr[i] !== arr[j]) {
+                    check=true;    //không có trùng
+                }else {
+                    check=false   //có trùng
+                }
+            }
+            if (check) {
+                arr2[a]=arr[i];
+                a++;
+            }
+        }
+        alert(arr2)
+    }
 </script>
