--- a/Bai15/ung-dung-quan-li-san-pham-su-dung-ham.html
+++ b/Bai15/ung-dung-quan-li-san-pham-su-dung-ham.html
@@ -81,8 +81,8 @@
         let img = document.getElementById("img").value;
         let arrthem=[arr.length,name,img]
         arr.push(arrthem);
-        ds=""
-        hienthi()
+        ds="";
+        hienthi();
     }
 
 </script>
