--- a/Bai16/thuc-hanh-funny-circles.html
+++ b/Bai16/thuc-hanh-funny-circles.html
@@ -5,9 +5,38 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="canvas" width="1500" height="700" style="background: #2b88d8"></canvas>
+<canvas id="myCanvas" width="1500" height="700" style="background: aqua"></canvas>
 </body>
 </html>
 <script>
+    let tron=function (x,y,radius) {
+        this.radius=radius;
+        this.x=x;
+        this.y=y;
+    }
+    function taohinhtron() {
+        let a=document.getElementById("myCanvas").getContext("2d");
+        let radius=Math.floor(Math.random()*100)
+        let color=randomcolor();
+        let x=Math.floor(Math.random()*window.innerWidth);
+        let y=Math.floor(Math.random()*window.innerHeight);
+        let ve=new tron(x,y,radius);
+        a.beginPath();
+        a.arc(ve.x,ve.y,ve.radius,0,2*Math.PI);
+        a.fillStyle=color
+        a.fill();
+    }
+    function randomcolor() {
+        let hex=Math.floor(Math.random()*16777215).toString(16);
+        let color="#"+hex;
+        return color
+
+    }
+    function taonhieuhinhtron() {
+        for (let i = 0; i < 30; i++) {
+            taohinhtron()
+        }
+    }
+    taonhieuhinhtron()
 
 </script>
