--- a/Bai15/ung-dung-quan-li-san-pham-su-dung-ham.html
+++ b/Bai15/ung-dung-quan-li-san-pham-su-dung-ham.html
@@ -35,38 +35,54 @@
 <input placeholder="Nhập tên" id="name"><br><br>
 <input placeholder="Link ảnh" id="img"><br><br>
 <button onclick="them()">Thêm</button>
-<button onclick="xacnhansua()">Xác nhận sửa</button><br><br>
-<table id="ds">
+<button onclick="xacnhansua()">Xác nhận sửa</button>
+<br><br>
+<table>
+    <thead>
+    <tr>
+        <td>STT</td>
+        <td>Tên</td>
+        <td>Hình ảnh</td>
+        <td>Xóa</td>
+        <td>Sửa</td>
+    </tr>
+    </thead>
+    <tbody id="ds">
+
+    </tbody>
 </table>
 </body>
 </html>
 <script>
-    let arr = [
-        ["STT", "Tên", "Hình ảnh", "Xóa","Sửa"],
-        ["1", "Apple", "https://www.freeiconspng.com/uploads/apple-icon-4.png",],
-        ["2", "Samsung", "https://th.bing.com/th/id/R.93f30978b06f43657edfb980e1a3459e?rik=kZp5rWBHrJWc0g&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fsamsung-hd-png-samsung-logo-1000.jpg&ehk=zhoDBloOTla6lO8irUMtSwOnZjuiSJ0cbS%2b7fqb29cc%3d&risl=&pid=ImgRaw&r=0",],
-        ["3", "Oppo", "https://th.bing.com/th/id/OIP.aBv1iocZbd3g15FKkAO_6AHaFW?pid=ImgDet&rs=1",],
-        ["4", "Xiaomi", "https://th.bing.com/th/id/OIP.zGpyhF0lnbEWO-RNOepS8gAAAA?pid=ImgDet&rs=1",],
-        ["5", "Sony", "https://th.bing.com/th/id/R.9e40e8c94ca86982fdf8f54ea1d2c3bf?rik=25GAUmceNjSovw&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fsony-png-sony-logo-png-6000.png&ehk=NKHd62X9G7USQzNwfKiQn5SPXJFhCRLsu2obcfvVJVU%3d&risl=&pid=ImgRaw&r=0",],
-    ];
+    class sanpham {
+        stt;
+        name;
+        img;
+
+        constructor(stt, name, img) {
+            this.stt = stt;
+            this.name = name;
+            this.img = img;
+        }
+    }
+
+    let apple = new sanpham("1", "Apple", "https://www.freeiconspng.com/uploads/apple-icon-4.png")
+    let samsung = new sanpham("2", "Samsung", "https://th.bing.com/th/id/R.93f30978b06f43657edfb980e1a3459e?rik=kZp5rWBHrJWc0g&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fsamsung-hd-png-samsung-logo-1000.jpg&ehk=zhoDBloOTla6lO8irUMtSwOnZjuiSJ0cbS%2b7fqb29cc%3d&risl=&pid=ImgRaw&r=0")
+    let oppo = new sanpham("3", "Oppo", "https://th.bing.com/th/id/OIP.aBv1iocZbd3g15FKkAO_6AHaFW?pid=ImgDet&rs=1");
+    let xiaomi = new sanpham("4", "Xiaomi", "https://th.bing.com/th/id/OIP.zGpyhF0lnbEWO-RNOepS8gAAAA?pid=ImgDet&rs=1");
+    let sony = new sanpham("5", "Sony", "https://th.bing.com/th/id/R.9e40e8c94ca86982fdf8f54ea1d2c3bf?rik=25GAUmceNjSovw&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fsony-png-sony-logo-png-6000.png&ehk=NKHd62X9G7USQzNwfKiQn5SPXJFhCRLsu2obcfvVJVU%3d&risl=&pid=ImgRaw&r=0")
+    let arr = [apple, samsung, oppo, xiaomi, sony]
 
     function hienthi() {
         let ds = "";
         for (let i = 0; i < arr.length; i++) {
-            ds += "<tr>"
-            for (let j = 0; j < arr[i].length; j++) {
-                if (i > 0 && j === 2) {
-                    ds += "<td><img src=" + arr[i][j] + " width='100' height='100'></td>"
-                } else {
-                    ds += "<td>" + arr[i][j] + "</td>"
-                }
-            }
-            if (i !== 0) {
-                ds += "<td><button onclick='xoa("+i+")'>Xóa</button></td>"+
-                    "<td><button onclick='sua("+i+")'>Sửa</button></td>"
-            }
-            ds += "</tr>"
-
+            ds += "<tr>" +
+                "<td>" + arr[i].stt + "</td>" +
+                "<td>" + arr[i].name + "</td>" +
+                "<td><img src='" + arr[i].img + "' alt='Load....' width='150' height='150'></td>" +
+                "<td><button onclick='xoa(" + i + ")'>Xóa</button></td>" +
+                "<td><button onclick='sua(" + i + ")'>Sửa</button></td>" +
+                "</tr>"
         }
         document.getElementById("ds").innerHTML = ds;
     }
@@ -77,24 +93,32 @@
         arr.splice(index, 1,);
         hienthi()
     }
+
     function them() {
         let name = document.getElementById("name").value;
         let img = document.getElementById("img").value;
-        let arrthem=[arr.length,name,img]
-        arr.push(arrthem);
+        let doituong = new sanpham(arr.length+1,name,img)
+        arr.push(doituong);
         hienthi();
     }
+
     function sua(i) {
-        document.getElementById("name").value=arr[i][1];
-        document.getElementById("img").value=arr[i][2];
-        document.getElementById("id").value=arr[i][0];
+        document.getElementById("name").value = arr[i].name;
+        document.getElementById("img").value = arr[i].img;
+        document.getElementById("id").value = arr[i].stt;
+
     }
+
     function xacnhansua() {
-        let name=document.getElementById("name").value;
-        let img=document.getElementById("img").value;
-        let id=document.getElementById("id").value;
-        arr[id]=[id,name,img]
+        let name = document.getElementById("name").value;
+        let img = document.getElementById("img").value;
+        let id = document.getElementById("id").value;
+        let doituongsua=new sanpham(id,name,img)
+        arr[id-1]=doituongsua;
         hienthi();
+        name.value=""
+        img.value="";
+        id.value=""
 
     }
 </script>
